--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,10 +1,10 @@
-/* Cabecera */
+/*Cabezera*/
 .cabecera__container{
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    top: 0;
+    top: 0%;
 }
 
 .cabecera__buscar__item{
@@ -43,18 +43,29 @@
     display: none;
 }
 
+/* Rodapie */
+.rodapie__container{
+    display: flex;
+    /*
+    flex-wrap: wrap;
+    flex-direction: column;
+     */
+    flex-flow: column wrap;
+}
+
 
 /* Seccion superior */
 .superior__seccion__container{
     display: flex;
     align-items: center;
-    white-space: nowrap;
+    white-space:nowrap;
     overflow: scroll;
     gap: 15px;
+    
 
 }
 
-/*Seccion  Videos */
+/* Seccion videos */
 
 .videos__item{
     height: 303px;
@@ -63,117 +74,71 @@
 }
 
 .videos__container{
-    display:flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    
-
-}
-
-
-/* DESAFIO DESCRIPCIÓN DE LOS VIDEOS */ 
-
-.descripcion-video {
-    margin-top: 1rem;
     display: flex;
-    align-items: start; 
-    
+    flex-wrap: wrap;   
+    gap:10px;
 }
 
-.descripcion-video img {
-    margin-right: 1rem; 
-    flex-shrink: 0;  /*  Evita que la imagen se reduzca */
-    
-}
+@media (min-width:834px){
+    /* Cabezera */
 
-.detalles__video {
-    flex-direction: column;
-    text-align:left;
-
-}
-
-.detalles__video h3{
-    margin-bottom: 10px;
-}
-
-
-/* Rodapie */
-.rodapie__container{
-    display: flex;
-    /* flex-direction: column;
-   flex-wrap: wrap; */
-   flex-flow: column wrap;
-    
-   
-}
-
-
-
-@media (min-width:834px) {
-
-    /* Cabecera */
     .cabecera__buscar__item{
-        display: block
+        display: block  ;
     }
-    /* Desafío Menú Lateral */
-    .menu__container {
-        left: 0;
-        height: auto;
-        width: 74px;
-        top: 80px;
-    }
-    
-    .menu__lista {
-        flex-direction: column;
-        justify-content: flex-start;
-        padding-top: 15px;
-        gap: 33px;
-    }
-
 
     /* Rodapie */
+
     .rodapie__container{
         justify-content: space-between;
     }
-   
 
+    .menu__container{
+        position: fixed;
+        top:80px;
+        height: auto;
+        width: 74px;
+    }
+
+    .menu__lista{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        gap: 30px;
+    }
 }
 
 
-
-@media (min-width:1440px ){
-
+@media(min-width:1440px) {
+    
     .menu__container{
-        width: 239px;
-        overflow: scroll;
-
+    width:239px;
+    overflow: scroll;
     }
 
     .menu__lista:nth-child(2),
     .menu__lista:nth-child(3),
     .menu__lista:nth-child(4){
-        display: flex;
+    display: flex;
     }
 
     .menu__lista{
         height: auto;
         padding: 20px 17px 20px 15px;
         gap: 15px;
-       
     }
 
     .menu__lista:nth-child(3){
         flex-direction: column-reverse;
-
     }
+
     .menu__itens{
         flex-direction: row;
-        gap: 15px;
+        gap:15px;
         align-items: center;
     }
 
     .videojuegos{
-        order: 3;
+        order:3;
     }
 
     .peliculas{
@@ -184,11 +149,4 @@
         order:1;
     }
 
-    
-   
-
-
-
-
 }
-
